// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamRosterDiagView TeamRosterDiagView - global and sample - choose baseline 1`] = `
<DocumentFragment>
  <div
    class="container-fluid"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-sm"
        id="rosterView"
      >
        <thead>
          <tr>
            <th
              style="text-align: right; width: 0.0%; font-weight: bold;"
            >
              <div>
                <button
                  class="float-left btn btn-outline-secondary btn-sm"
                  id="rosterView_copy"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-clipboard "
                    data-icon="clipboard"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M192 0c-41.8 0-77.4 26.7-90.5 64L64 64C28.7 64 0 92.7 0 128L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64l-37.5 0C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM112 192l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  C
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: right; width: 0.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AaWiggins&offQuery=&onQuery=%7B%22Wiggins%2C%20Aaron%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAW%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAaWiggin%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(255, 206, 206, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 600;"
                                >
                                  AaWiggins
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffbb3e,0px 0px 15px #ffbb3e,0px 0px 15px #ffbb3e;"
                    >
                      76%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DaMorsell&offQuery=&onQuery=%7B%22Morsell%2C%20Darryl%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDM%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDaMorsel%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DaMorsell
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=JaSmith&offQuery=&onQuery=%7B%22Smith%2C%20Jalen%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EJS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EJaSmith%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  JaSmith
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffbc43,0px 0px 15px #ffbc43,0px 0px 15px #ffbc43;"
                    >
                      74%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=ErAyala&offQuery=&onQuery=%7B%22Ayala%2C%20Eric%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EEA%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EErAyala%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  ErAyala
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AnCowan&offQuery=&onQuery=%7B%22Cowan%2C%20Anthony%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAC%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAnCowan%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(155, 205, 155, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 700;"
                                >
                                  AnCowan
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                                <sub
                                  class="freeThrowBadge"
                                />
                                <sup
                                  class="megaAssistBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: right; width: 0.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffe9c1,0px 0px 15px #ffe9c1,0px 0px 15px #ffe9c1;"
                    >
                      24%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DoScott&offQuery=&onQuery=%7B%22Scott%2C%20Donta%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDoScott%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DoScott
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffe8bc,0px 0px 15px #ffe8bc,0px 0px 15px #ffe8bc;"
                    >
                      26%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DoScott&offQuery=&onQuery=%7B%22Scott%2C%20Donta%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDoScott%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DoScott
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="col"
    >
      Using [global] stats - 
      <a
        href="#"
      >
        switch to sample stats
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TeamRosterDiagView TeamRosterDiagView - global and sample - choose sample 1`] = `
<DocumentFragment>
  <div
    class="container-fluid"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-sm"
        id="rosterView"
      >
        <thead>
          <tr>
            <th
              style="text-align: right; width: 0.0%; font-weight: bold;"
            >
              <div>
                <button
                  class="float-left btn btn-outline-secondary btn-sm"
                  id="rosterView_copy"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-clipboard "
                    data-icon="clipboard"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M192 0c-41.8 0-77.4 26.7-90.5 64L64 64C28.7 64 0 92.7 0 128L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64l-37.5 0C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM112 192l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  C
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: right; width: 0.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AaWiggins&offQuery=&onQuery=%7B%22Wiggins%2C%20Aaron%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAW%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAaWiggin%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(255, 206, 206, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 600;"
                                >
                                  AaWiggins
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DaMorsell&offQuery=&onQuery=%7B%22Morsell%2C%20Darryl%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDM%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDaMorsel%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DaMorsell
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=JaSmith&offQuery=&onQuery=%7B%22Smith%2C%20Jalen%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EJS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EJaSmith%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  JaSmith
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=ErAyala&offQuery=&onQuery=%7B%22Ayala%2C%20Eric%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EEA%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EErAyala%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  ErAyala
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AnCowan&offQuery=&onQuery=%7B%22Cowan%2C%20Anthony%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAC%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAnCowan%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(155, 205, 155, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 700;"
                                >
                                  AnCowan
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                                <sub
                                  class="freeThrowBadge"
                                />
                                <sup
                                  class="megaAssistBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="col"
    >
      Using [sample] stats - 
      <a
        href="#"
      >
        switch to global stats
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TeamRosterDiagView TeamRosterDiagView - global only 1`] = `
<DocumentFragment>
  <div
    class="container-fluid"
  >
    <div
      class="col-12"
    >
      <table
        class="table table-sm"
        id="rosterView"
      >
        <thead>
          <tr>
            <th
              style="text-align: right; width: 0.0%; font-weight: bold;"
            >
              <div>
                <button
                  class="float-left btn btn-outline-secondary btn-sm"
                  id="rosterView_copy"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-clipboard "
                    data-icon="clipboard"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    viewBox="0 0 384 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M192 0c-41.8 0-77.4 26.7-90.5 64L64 64C28.7 64 0 92.7 0 128L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64l-37.5 0C269.4 26.7 233.8 0 192 0zm0 64a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM112 192l160 0c8.8 0 16 7.2 16 16s-7.2 16-16 16l-160 0c-8.8 0-16-7.2-16-16s7.2-16 16-16z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SG
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  SF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  PF
                </span>
              </div>
            </th>
            <th
              style="text-align: center; width: 20.0%; font-weight: bold;"
            >
              <div>
                <span>
                  C
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: right; width: 0.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AaWiggins&offQuery=&onQuery=%7B%22Wiggins%2C%20Aaron%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAW%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAaWiggin%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(255, 206, 206, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 600;"
                                >
                                  AaWiggins
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffbb3e,0px 0px 15px #ffbb3e,0px 0px 15px #ffbb3e;"
                    >
                      76%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DaMorsell&offQuery=&onQuery=%7B%22Morsell%2C%20Darryl%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDM%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDaMorsel%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DaMorsell
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=JaSmith&offQuery=&onQuery=%7B%22Smith%2C%20Jalen%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EJS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EJaSmith%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  JaSmith
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffbc43,0px 0px 15px #ffbc43,0px 0px 15px #ffbc43;"
                    >
                      74%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=ErAyala&offQuery=&onQuery=%7B%22Ayala%2C%20Eric%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EEA%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EErAyala%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  ErAyala
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffa500,0px 0px 15px #ffa500,0px 0px 15px #ffa500;"
                    >
                      100%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=AnCowan&offQuery=&onQuery=%7B%22Cowan%2C%20Anthony%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EAC%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EAnCowan%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: rgba(155, 205, 155, 0.502);"
                              >
                                <span
                                  style="font-size: small; font-weight: 700;"
                                >
                                  AnCowan
                                </span>
                              </span>
                              <span>
                                <sup
                                  class="threePointBadge"
                                />
                                <sub
                                  class="freeThrowBadge"
                                />
                                <sup
                                  class="megaAssistBadge"
                                />
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: right; width: 0.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffe9c1,0px 0px 15px #ffe9c1,0px 0px 15px #ffe9c1;"
                    >
                      24%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DoScott&offQuery=&onQuery=%7B%22Scott%2C%20Donta%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDoScott%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DoScott
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div
                  class="row"
                >
                  <div
                    class="pr-0 pl-0 col-3"
                  >
                    <div
                      class="float-right"
                      style="text-shadow: 0px 0px 15px #ffe8bc,0px 0px 15px #ffe8bc,0px 0px 15px #ffe8bc;"
                    >
                      26%
                    </div>
                  </div>
                  <div
                    class="col-auto"
                  >
                    <div
                      class="float-left"
                      style="display: flex;"
                    >
                      <div>
                        <a
                          href="/OnOffAnalyzer?autoOffQuery=false&calcRapm=true&diffsHideDatasets=on&filter=DoScott&offQuery=&onQuery=%7B%22Scott%2C%20Donta%22%7D%3D1&playerDiffs=true&playerDiffsHideDatasets=on&possAsPct=false&showExpanded=true&showExtraInfo=true&showRoster=true&showTeamPlayTypes=true&sortBy=desc%3Aoff_team_poss_pct%25%3Aon&splitPhrases=Lineups&splitPhrases=&splitText=%3Cdiv%3E%3Csmall%20class%3D%22d-xl-none%22%3EDS%3C%2Fsmall%3E%3Csmall%20class%3D%22d-none%20d-xl-block%22%3EDoScott%3C%2Fsmall%3E%3C%2Fdiv%3E&splitText=&teamDiffs=true&teamShotCharts=true&"
                          style="text-decoration: inherit;"
                          target="_blank"
                        >
                          <span>
                            <span
                              style="white-space: nowrap;"
                            >
                              <span
                                class="badge badge-light"
                                style="background-color: grey;"
                              >
                                <span
                                  style="font-size: small;"
                                >
                                  DoScott
                                </span>
                              </span>
                            </span>
                          </span>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td
              class=" square-bg-cell"
              colspan="1"
              rowspan="1"
              style="text-align: center; width: 20.0%; font-weight: normal; vertical-align: middle; color: rgb(82, 82, 82);"
            >
              <div
                style="position: relative; z-index: 1;"
              >
                <div />
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
